Fix checkbox labels overflowing

--- a/src/styles/less/floodtools.less
+++ b/src/styles/less/floodtools.less
@@ -359,7 +359,7 @@
 				@media (max-width: 700px) {
 					text-align: left !important;
 					display: flex !important;
-					padding: 3px 0 0 15px !important;
+					padding: 3px 0 0 5px !important;
 					margin-top: 10px;
 					justify-content: center;
 					order: 1;
@@ -372,13 +372,12 @@
                 justify-content: flex-start;
 				width: 100%;
 				box-sizing: border-box;
-				padding: 0 12px;
+				padding: 0 5px;
 
 				@media (max-width: 700px) {
 					padding: 0 6px 6px 0 !important;
 					width: auto !important;
 					height: fit-content !important;
-					white-space: pre;
 				}
 
                 label{
@@ -389,7 +388,8 @@
                     line-height: 15px;
 
 					@media (max-width: 700px) {
-						padding-right: 10px;
+						padding-right: 6px;
+						line-height: 10px;
 					}
 				}
 				input[type=checkbox]{
@@ -400,17 +400,17 @@
 				}
 			}
 			
-			@media (max-width: 700px) {
-				#satBasemap{
-					width: 90px !important;
-				}
-				#gridsCheck{
-					width: 82px !important;
-				}
-				#aouCheck{
-					width: 82px;
-				}
-			}
+			// @media (max-width: 700px) {
+			// 	#satBasemap{
+			// 		width: 90px !important;
+			// 	}
+			// 	#gridsCheck{
+			// 		width: 82px !important;
+			// 	}
+			// 	#aouCheck{
+			// 		width: 82px;
+			// 	}
+			// }
             
 
             // Legend for flood tools
